WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103292
[BlackBerry] Form controls don't show pressed state.
https://bugs.webkit.org/show_bug.cgi?id=103292
Summary
[BlackBerry] Form controls don't show pressed state.
gmak
Reported
2012-11-26 14:03:08 PST
Touch down doesn't depress them.
Attachments
Patch - WebKit
(5.28 KB, patch)
2012-11-26 14:10 PST
,
gmak
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
gmak
Comment 1
2012-11-26 14:10:26 PST
Created
attachment 176061
[details]
Patch - WebKit
Rob Buis
Comment 2
2012-11-26 14:15:28 PST
Comment on
attachment 176061
[details]
Patch - WebKit Ok.
WebKit Review Bot
Comment 3
2012-11-26 15:08:22 PST
Comment on
attachment 176061
[details]
Patch - WebKit Clearing flags on attachment: 176061 Committed
r135775
: <
http://trac.webkit.org/changeset/135775
>
WebKit Review Bot
Comment 4
2012-11-26 15:08:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug